# nh3sofc

./: .gitattributes  .gitignore  404.html  BUG_CHECKLIST.md  CLAUDE.md  EXPERIMENTS.md  IDEAS.md  LICENSE  LITERATURE.md  ORACLE.md  README.md  RESEARCH.md  RETROSPECTIVE.md  feature-list.json  index.html  init.sh  karpathy-rules.md  metrics_baseline.json  mkdocs.yml  nh3sofc.md  objects.inv  progress.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/analysis/: index.html
api/calculators/: index.html
api/core/: index.html
api/database/: index.html
api/structure/: index.html
api/workflows/: index.html
changelog/: index.html
claude/key-directories/: index.html
claude/plan-management/: index.html
claude/testing-guide/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  license.md  quickstart.md
docs/api/: analysis.md  calculators.md  core.md  database.md  index.md  structure.md  workflows.md
docs/claude/: key-directories.md  plan-management.md  testing-guide.md
docs/plans/: 2026-01-20-master-implementation-plan.md  2026-01-22-add-dband-analysis-theory-docs.md  2026-01-22-fix-adsorbate-placer-api.md  2026-01-22-surface-builder-enhancements.md  README.md
docs/tutorials/: adsorbate_placement.md  decomposition.md  doped_ceria.md  doped_fluorite.md  exsolution.md  index.md  mace.md  microkinetics.md  neb.md  screening.md  surface_building.md  surface_comparison.md  surface_stability.md  theory.md  thermochemistry.md  vasp_calculations.md
installation/: index.html
license/: index.html
nh3sofc/: __init__.py
nh3sofc/analysis/: __init__.py  electronic.py  energetics.py  exsolution.py  microkinetic.py  rds.py  surface_comparison.py  thermochemistry.py
nh3sofc/calculators/: __init__.py
nh3sofc/core/: __init__.py  base.py  constants.py  io.py
nh3sofc/database/: __init__.py  asedb.py  naming.py
nh3sofc/jobs/: __init__.py  pbs.py
quickstart/: index.html
scripts/: metrics.py
search/: search_index.json
tests/: conftest.py  test_metrics_ratchet.py  test_mkm_oracle.py  test_regressions.py  test_smoke.py
tutorials/: index.html
(+36 files in other folders)
