[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nh3sofc"
version = "0.1.0"
description = "NH3 Solid Oxide Fuel Cell simulation package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zhenzhu Li"}
]
keywords = [
    "DFT",
    "VASP",
    "MACE",
    "SOFC",
    "catalysis",
    "surface science",
    "NH3 decomposition",
    "oxynitrides",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "ase>=3.22.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
mace = ["mace-torch>=0.3.0"]
viz = ["matplotlib>=3.5.0"]
spglib = ["spglib>=2.0.0"]
catkit = ["catkit"]
all = [
    "mace-torch>=0.3.0",
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
    "spglib>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-exclude>=1.0.2",
]

[project.urls]
"Homepage" = "https://github.com/lizhenzhupearl/nh3sofc"
"Bug Reports" = "https://github.com/lizhenzhupearl/nh3sofc/issues"

[project.scripts]
nh3sofc = "nh3sofc.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nh3sofc*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
